deploy final (добавил телеграм бота)